# agente

./: .env.example  .gitignore  Dockerfile  README.md  compose.yml  ejemplo.py  ejemploollama.py  index.html  index2.html  presentacion_ngrok.html  pyproject.toml
documentos/: hola.txt  zz.txt
local_rag/: agent.py  agent_graph.py  agentgraph.py  api.py  api_graph.py  config.py  ingest.py
