[project]
name = "sinrodilla"
version = "0.1.0"
description = ""
authors = [
    {name = "Sebastian Zapata",email = "pansezapata@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "langchain (>=1.2.15,<2.0.0)",
    "langchain-openai (>=1.2.1,<2.0.0)",
    "langchain-postgres (>=0.0.17,<0.0.18)",
    "psycopg[binary] (>=3.3.3,<4.0.0)",
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "pypdf (>=6.10.2,<7.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "langchain-ollama (>=1.1.0,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-text-splitters (>=1.1.2,<2.0.0)",
    "transformers (>=5.7.0,<6.0.0)"
]

[tool.poetry]
packages = [{include = "sinrodilla", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
